@@ -20,8 +20,8 @@
 #'   the variables to use. Can be missing, which turns the CCA analysis into
 #'   a CA analysis. All variables are used. Please subset, if you want to
 #'   consider only some of them.
-#'
-#' @param scale Logical scalar, should the expression values be standardized?
+#'   
+#' @param scale a logical scalar, should the expression values be standardized?
 #' 
 #' @param abund_values a single \code{character} value for specifying which
 #'   assay to use for calculation.
@@ -37,7 +37,11 @@
 #' @param name String specifying the name to be used to store the result in the
 #'   reducedDims of the output.
 #'
-#' @param ... additional arguments passed to vegan::cca or vegan::rda .
+#' @param ... additional arguments passed to vegan::cca or vegan::dbrda
+#' 
+#' @details
+#'   *CCA functions utilize \code{vegan:cca} and *RDA functions \code{vegan:dbRDA}.
+#'   By default dbRDA is done with euclidean distances which equals to RDA.
 #'
 #' @return
 #' For \code{calculateCCA} a matrix with samples as rows and CCA dimensions as
@@ -49,7 +53,7 @@
 #' @name runCCA
 #' @seealso
 #' For more details on the actual implementation see \code{\link[vegan:cca]{cca}}
-#' and \code{\link[vegan:cca]{rda}}
+#' and \code{\link[vegan:dbrda]{dbrda}}
 #'
 #' @examples
 #' library(scater)
@@ -59,6 +63,18 @@
 #'
 #' GlobalPatterns <- runRDA(GlobalPatterns, data ~ SampleType)
 #' plotReducedDim(GlobalPatterns,"CCA", colour_by = "SampleType")
+#' 
+#' # To scale values when using *RDA functions, use transformFeatures
+#' tse <- GlobalPatterns
+#' tse <- transformFeatures(tse, method = "z")
+#' # Data might include taxa that do not vary. Remove those because after z-transform
+#' # their value is NA
+#' tse <- tse[ rowSums( is.na( assay(tse, "z") ) ) == 0, ]
+#' # Calculate RDA
+#' tse <- runRDA(tse, formula = data ~ SampleType, 
+#'               abund_values = "z", name = "rda_scaled", na.action = na.omit)
+#' # Plot
+#' plotReducedDim(tse,"rda_scaled", colour_by = "SampleType")
 NULL
 
 #' @rdname runCCA
@@ -177,12 +193,8 @@ setMethod("runCCA", "SingleCellExperiment",
     }
 )
 
-.calculate_rda <- function(x, formula, variables, scale = TRUE, ...){
+.calculate_rda <- function(x, formula, variables, ...){
     .require_package("vegan")
-    # input check
-    if(!.is_a_bool(scale)){
-        stop("'scale' must be TRUE or FALSE.", call. = FALSE)
-    }
     #
     x <- as.matrix(t(x))
     variables <- as.data.frame(variables)
@@ -192,14 +204,14 @@ setMethod("runCCA", "SingleCellExperiment",
         # recast formula in current environment
         form <- as.formula(paste(as.character(formula)[c(2,1,3)],
                                  collapse = " "))
-        rda <- vegan::rda(form, data = variables, scale = scale, ...)
+        rda <- vegan::dbrda(form, data = variables, ...)
         X <- rda$CCA
     } else if(ncol(variables) > 0L) {
-        rda <- vegan::rda(X = x, Y = variables, scale = scale, ...)
+        rda <- vegan::dbrda(X = x, Y = variables, ...)
         X <- rda$CCA
     } else {
-        rda <- vegan::rda(X = x, scale = scale, ...)
-        X <- rda $CA
+        rda <- vegan::dbrda(X = x, ...)
+        X <- rda$CA
     }
     ans <- X$u
     attr(ans, "rotation") <- X$v
