@@ -31,11 +31,15 @@ test_that("CCA", {
     expect_equal(actual, "dune")
     #
     mcca <- vegan::cca(form, dune.env, scale = TRUE)
-    mrda <- vegan::rda(form, dune.env, scale = TRUE)
+    mrda <- vegan::rda(form, dune.env, scale = FALSE)
     sce <- runCCA(sce, form)
     actual <- reducedDim(sce,"CCA")
     expect_equal(as.vector(actual), as.vector(mcca$CCA$u))
     sce <- runRDA(sce, form)
     actual <- reducedDim(sce,"RDA")
-    expect_equal(as.vector(actual), as.vector(mrda$CCA$u))
+    expect_equal(abs( as.vector(actual) ), abs( as.vector(mrda$CCA$u) ))
+    sce <- runRDA(sce, form, distance = "bray", name = "rda_bray")
+    actual <- reducedDim(sce,"rda_bray")
+    rda_bray <- vegan::dbrda(form, dune.env, distance = "bray")
+    expect_equal(abs( as.vector(actual) ), abs( as.vector(rda_bray$CCA$u) ))
 })
